# k4DataSource

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.sh
.github/workflows/: test.yml
DataFormats/: CMakeLists.txt
DataFormats/RecoJet/include/: RecoJet.h
DataFormats/RecoJet/src/: RecoJetConverter.cc  classes.h  classes_def.xml
DataFormats/RecoParticle/include/: RecoParticle.h
DataFormats/RecoParticle/src/: RecoParticleConverter.cc  classes.h  classes_def.xml
cmake/: CatchInclude.cmake  DataFormatsUtils.cmake
k4DataSource/: DataFormatter.h  k4DataConverter.h  k4DataConverterFactory.h  k4DataConverters.h  k4DataSource.h  k4DataSourceItem.h  k4Logger.h  k4Parameters.h  k4Record.h  k4SlotReader.h  k4TreeReader.h
python/: Core.py
src/: DataFormatter.cc  classes.h  classes_def.xml  k4DataConverter.cc  k4DataConverterFactory.cc  k4DataConverters.cc  k4DataSource.cc  k4DataSourceItem.cc  k4Logger.cc  k4Parameter.cc  k4Record.cc  k4SlotReader.cc  k4TreeReader.cc
test/: CMakeLists.txt  load_df.cc  load_df.py  memory.cc  memory_objects.cc  parameters.py
